--- a/src/BoardGrid.css
+++ b/src/BoardGrid.css
@@ -1,9 +1,9 @@
 .BoardGrid {
     width: 700px;
-    height: 750px;
+    height: 700px;
     display: flex;
     flex-wrap: wrap;
-    /* margin-top: 1em; */
+    margin-bottom: 2em;
 }
 
 h3 {
